gateway/1.9/modules/ROOT/pages/_partials/timeout-configuration.adoc
Flex Gateway offers these timeouts to improve service quality and reduce computing resource waste:

* *Stream Idle Timeout* +
The Stream Idle Timeout enables you to set a maximum amount of a time a stream can remain idle without receiving any data in either the inbound (client to Flex Gateway) or outbound (Flex Gateway to upstream service) direction.
+
By default, all Flex Gateway API instances have a stream timeout of 300 seconds.

* *Upstream Idle Timeout* +
The Upstream Idle Timeout policy enables you to set a maximum amount of a time a stream between Flex Gateway and the upstream service can remain idle without receiving any additional requests.
+
By default, all Flex Gateway API instances have an upstream idle timeout of 60 seconds.

* *Response Timeout* +
The Response Timeout enables you to set a maximum amount of a time Flex Gateway waits for a response from an upstream service. The timeout time starts at the last request sent by Flex Gateway.
+
By default, all Flex Gateway API instances have a response timeout of 15 seconds.

You can configure these timeouts via:

* Environment variables: Applies to all API instances and is the most permanent configuration option.
* Configuration YAML file: Applies to all API instances and is easy to adjust.
* Policy: Applies to just one API instance or upstream providing granularity and is easy to adjust.

== Configure Timeouts via Environment Variables

Configure timeouts with these environment variables:

----
FLEX_STREAM_IDLE_TIMEOUT_SECONDS: 300
FLEX_UPSTREAM_CONNECTION_IDLE_TIMEOUT_SECONDS/FLEX_CONNECTION_IDLE_TIMEOUT_SECONDS: 60
FLEX_UPSTREAM_RESPONSE_TIMEOUT_SECONDS: 15
----

Edit the variables with your desired configurations.

== Configure Timeouts via YAML Configuration Resources

Edit and then apply this configuration resource to update your timeouts:

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: timeouts-config
spec:
  timeouts:
    upstreamConnectionIdleSeconds: 300
    upstreamResponseSeconds: 15
    streamIdleSeconds: 60
----

== Configure Timeouts via Policies

Apply these policies to your API instance or upstream service:

* xref:policies-included-stream-idle-timeout.adoc[]
* xref:policies-outbound-idle-timeout.adoc[]
* xref:policies-incleded-response-timeout.adoc[]

